Changes in Text

--- a/index.css
+++ b/index.css
@@ -1,4 +1,27 @@
 .logo {
-	width: 50%;
-	height: 50%;
+	width: 23%;
+	height: 23%;
+}
+
+.jsk {
+	color: #FF0000;
+}
+
+.wt {
+	background-color: #0000FF;
+	color: #FFFFFF;
+	border-radius: 20px;
+}
+
+.ofscs {
+	color: #0000FF;
+}
+
+.con {
+	border: 5px #556B2F;
+	border-style: solid;
+}
+
+.shlok {
+	color: #FFFFFF;
 }
